Project/GpMessages/640303430239700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Thursday, 8 May 2025 8:41:19</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    u"410635_411135"+"_"+str(abs(-11.804510000000001))+"_"+u"1967/05"+"_"str(-2.4199999999999999)
                                                                         ^^^
﻿SyntaxError: invalid syntax
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Thursday, 8 May 2025 8:41:19 (Elapsed Time: 0.43 seconds)</msg></messages>